fixed z-index styling issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -543,6 +543,10 @@ a {
     z-index: 2;
   }
 
+  .info-modal {
+    z-index: 3;
+  }
+
   .info-modal img {
     border-radius: 15px;
     left: 15%;
